--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=mongodb+srv://admin:admin@cluster0.hfjj9.mongodb.net
+DATABASE_URL="mongodb://localhost:27017/dev"
+# DATABASE_URL="file:./dev.db"
