--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@graphql-tools/merge": "6.0.18",
     "@graphql-tools/schema": "6.0.18",
     "@prisma/client": "^6.2.1",
+    "bcrypt": "^5.1.1",
     "graphql": "15.8.0",
     "graphql-tag": "^2.12.6",
     "graphql-yoga": "three",
+    "jsonwebtoken": "^9.0.2",
     "next": "^12.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -25,7 +27,9 @@
     "@graphql-codegen/client-preset": "1.1.0",
     "@graphql-codegen/typed-document-node": "^2.2.8",
     "@graphql-codegen/typescript-resolvers": "^2.6.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^27.0.2",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/mocha": "^9.0.0",
     "@types/node": "^18.19.74",
     "@types/react": "^16.9.46",
