--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "2.13.7",
+    "@graphql-codegen/cli": "^4.0.1",
+    "@graphql-codegen/typescript": "^4.0.0",
+    "@graphql-codegen/typescript-operations": "^4.0.0",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.11",
     "@graphql-codegen/client-preset": "1.1.0",
     "@graphql-codegen/typed-document-node": "^2.2.8",
     "@graphql-codegen/typescript-resolvers": "^2.6.1",
-    "@types/bcrypt": "^5.0.2",
     "@tailwindcss/typography": "^0.4.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/mocha": "^9.0.0",
@@ -49,17 +52,17 @@
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "jest": "^27.2.5",
+    "postcss": "^8.0.9",
     "prisma": "^6.2.1",
+    "tailwindcss": "^2.2.19",
     "ts-node": "10.8.0",
     "tsx": "^4.19.2",
-    "postcss": "^8.0.9",
-    "tailwindcss": "^2.2.19",
     "twin.macro": "^2.8.2",
     "typescript": "^5.1.0",
     "yaml-loader": "0.6.0"
   },
   "prisma": {
-    "schema":  "server/prisma/schema.prisma",
+    "schema": "server/prisma/schema.prisma",
     "seed": "ts-node prisma/seed.ts"
   }
 }
