--- a/.gitignore
+++ b/.gitignore
@@ -47,9 +47,8 @@ next-env.d.ts
 *.graphqls.d.ts
 .cache
 
-lib/resolvers-types.ts
-lib/graphql-operations.ts
-lib/gql
+
+**/*/__generated__
 
 .idx/*
 !.idx/dev.nix
