--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "graphql-tag": "^2.12.6",
     "graphql-yoga": "three",
     "jsonwebtoken": "^9.0.2",
-    "next": "^12.1.5",
+    "next": "12.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.30.0",
@@ -30,31 +30,32 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^4.0.1",
+    "@graphql-codegen/client-preset": "4.6.0",
+    "@graphql-codegen/typed-document-node": "^2.2.8",
     "@graphql-codegen/typescript": "^4.0.0",
     "@graphql-codegen/typescript-operations": "^4.0.0",
-    "@graphql-codegen/typescript-react-apollo": "^3.2.11",
-    "@graphql-codegen/client-preset": "1.1.0",
-    "@graphql-codegen/typed-document-node": "^2.2.8",
-    "@graphql-codegen/typescript-resolvers": "^2.6.1",
-    "@tailwindcss/typography": "^0.4.1",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.2",
+    "@graphql-codegen/typescript-resolvers": "^4.4.2",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/mocha": "^9.0.0",
     "@types/node": "^18.19.74",
-    "@types/react": "18.0.0",
-    "@types/react-dom": "18.0.0",
-    "@types/styled-components": "^5.1.15",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/styled-components": "^5.1.25",
     "autoprefixer": "^10.0.2",
     "babel-jest": "27.2.5",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "jest": "^27.2.5",
     "postcss": "^8.0.9",
     "prisma": "^6.2.1",
-    "tailwindcss": "^2.2.19",
+    "tailwindcss": "^3.1.2",
     "ts-node": "10.8.0",
     "tsx": "^4.19.2",
     "twin.macro": "^2.8.2",
@@ -62,7 +63,12 @@
     "yaml-loader": "0.6.0"
   },
   "prisma": {
-    "schema": "server/prisma/schema.prisma",
+    "schema": "src/server/prisma/schema.prisma",
     "seed": "ts-node prisma/seed.ts"
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "styled-components"
+    }
   }
 }
