--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,14 @@
 {
-  "extends": "next/core-web-vitals",
+  "extends": "next",
   "rules": {
-    "react/no-unknown-property": ["error", { "ignore": ["css", "tw"] }]
+    "react/no-unknown-property": [
+      "error",
+      {
+        "ignore": [
+          "css",
+          "tw"
+        ]
+      }
+    ]
   }
 }
