--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb://localhost:27017/dev"
-# DATABASE_URL="file:./dev.db"
+# DATABASE_URL="file:./dev.db" # sqlite
 
 JWT_SECRET=sdjflsfjlsd
